# zh-voice-gTTS-generator

./: .gitignore  LICENSE  Makefile  README.md  organizer.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  README_TEMPLATE.md
src/zh_voice_generator/: generate_zh_voice.py
src/zh_voice_generator/utils/: audio_utils.py
src/zh_voice_generator/validators/: input_validation.py
tests/utils_tests/: test_audio_utils.py
tests/validators_tests/: test_input_validation.py
